--- a/AxcelCapital/Views/Home/Index.cshtml
+++ b/AxcelCapital/Views/Home/Index.cshtml
@@ -1,67 +1,59 @@
-﻿@{
+﻿@model AxcelCapital.Models.Query
+
+@{
     ViewBag.Title = "Home Page";
 }
 
 
-<style>
-    #map {
-        height: 600px;
-        width: 100%
-    }
-</style>
-
-
-<section class="carousel-section">
-    <div id="carouselIndicators_Front" class="carousel slide" data-ride="carousel" data-pause="hover">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselIndicators_Front" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselIndicators_Front" data-slide-to="1"></li>
-            <li data-target="#carouselIndicators_Front" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="~/Images/singapore_1910x1000.jpg" alt="First slide">
-                <div class="carousel-title">
-                    <p>Finance Your Business</p>
-                </div>
-                <div class="carousel-description">
-                    <p>Business financing and investments, made easy</p>
-                </div>
+<div id="carouselIndicators_Front" class="carousel slide carousel-section" data-ride="carousel" data-pause="hover">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselIndicators_Front" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselIndicators_Front" data-slide-to="1"></li>
+        <li data-target="#carouselIndicators_Front" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="~/Images/singapore_1910x1000.jpg" alt="First slide">
+            <div class="carousel-title">
+                <span>Finance Your Business</span>
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="~/Images/tranquil_1910x1000.jpg" alt="Second slide">
-                <div class="carousel-title">
-                    <p>Finance Your Business</p>
-                </div>
-                <div class="carousel-description">
-                    <p>AxcelCapital for a peace of mind</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="~/Images/merlion_1910x1000.jpg" alt="Third slide">
-                <div class="carousel-title">
-                    <p>Finance Your Business</p>
-                </div>
-                <div class="carousel-description">
-                    <p>AxcelCapital helps with cashflow</p>
-                </div>
+            <div class="carousel-description">
+                <span>Business financing and investments, made easy</span>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselIndicators_Front" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselIndicators_Front" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="~/Images/tranquil_1910x1000.jpg" alt="Second slide">
+            <div class="carousel-title">
+                <span>Finance Your Business</span>
+            </div>
+            <div class="carousel-description">
+                <span>AxcelCapital for a peace of mind</span>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="~/Images/merlion_1910x1000.jpg" alt="Third slide">
+            <div class="carousel-title">
+                <span>Finance Your Business</span>
+            </div>
+            <div class="carousel-description">
+                <span>AxcelCapital helps with cashflow</span>
+            </div>
+        </div>
     </div>
-</section>
+    <a class="carousel-control-prev" href="#carouselIndicators_Front" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselIndicators_Front" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 
 
 <section class="section2">
     <div class="section2-title">
-        <p>Grow with AxcelCapital</p>
+        <h2>Grow with AxcelCapital</h2>
     </div>
     <div class="section2-description">
         <p>
@@ -110,8 +102,7 @@
 </section>
 
 
-<section class="contactUs-section">
-
+<section class="location-section">
 
     <div id="map"></div>
 
@@ -130,27 +121,92 @@
 
             var marker = new google.maps.Marker({ position: axcelAddress, map: map });
 
-            var centre;
-            var offSetX = 0.25;
-            var offSetY = 0;
+            //var offSetX = 0.25;
+            //var offSetY = 0;
 
-            var span = map.getBounds().toSpan();
+            //var span = map.getBounds().toSpan();
 
-            var newCentre = {
-                lat: centre.lat() + span.lat() * offSetY,
-                lng: centre.lng() + span.lng() * offSetX
-            };
+            //var newCentre = {
+            //    lat: axcelAddress.lat() + (span.lat() * offSetY),
+            //    lng: axcelAddress.lng() + (span.lng() * offSetX)
+            //};
 
-            map.panTo(newCentre);
+            //map.panTo(newCentre);
 
-            //map.panBy(300, 0);
+            map.panBy(300, 0);
         }
     </script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBcN7lCSyMTCu9hn2PT7xTZizLhGdUsO8&callback=initMap"
             async defer></script>
 
+    @*<div class="container">
+            <div class="row">
+                <div class="col-md-6"></div>
+                <div id="location-card" class="col-md-6">
+                    <div>
+                        sweelee@axcelcapital.sg
+                    </div>
+                    <div>
+                        Blk 239 Serangoon Avenue 2
+                    </div>
+                </div>
+            </div>
+        </div>*@
 </section>
+
+
+@*Contact Us Section*@
+<section>
+    <div class="container contactUs">
+        <h1>Contact Us Today For Your Consultation</h1>
+
+        @using (Html.BeginForm())
+        {
+            <div class="form-group row">
+                <div class="col-md-6">
+                    <label>First Name</label>
+                    @Html.TextBoxFor(m => m.firstName, new { @class = "form-control" })
+                </div>
+                <div class="col-md-6">
+                    <label>Last Name</label>
+                    @Html.TextBoxFor(m => m.lastName, new { @class = "form-control" })
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-md-6">
+                    <label>Email</label>
+                    @Html.TextBoxFor(m => m.email, new { @class = "form-control" })
+                </div>
+                <div class="col-md-6">
+                    <label>Mobile</label>
+                    @Html.TextBoxFor(m => m.mobile, new { @class = "form-control" })
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-md-6">
+                    <label>Company Name</label>
+                    @Html.TextBoxFor(m => m.companyName, new { @class = "form-control" })
+                </div>
+                <div class="col-md-6">
+                    <label>Company Turnover</label>
+                    @Html.TextBoxFor(m => m.turnOver, new { @class = "form-control" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>Message</label>
+                @Html.TextAreaFor(m => m.message, new { @class = "form-control col-md-12", @rows = "5" })
+            </div>
+
+
+        }
+
+    </div>
+</section>
+
 
 
 
