--- a/AxcelCapital/Views/Shared/_Layout.cshtml
+++ b/AxcelCapital/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AxcelCapital: Loan Financing@*@ViewBag.Title - My ASP.NET Application*@</title>
+    <title>AxcelCapital: Loan Financing</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -11,7 +11,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="@Url.Action("Index","Home")"><img src="~/Images/logo.png" width="150px" alt="AxcelCapital" /></a>
+        <a class="navbar-brand" href="@Url.Action("Index","Home")"><img src="~/Images/logo.png" alt="AxcelCapital" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,7 +58,6 @@
     </nav>
 
 
-    <div class="container body-content"></div>
     <div>
         @RenderBody()
         <hr />
@@ -231,8 +230,7 @@
         </div>
 
     </div>
-
-
+    
 
 
     @Scripts.Render("~/bundles/jquery")
