--- a/AxcelCapital/Content/AxcelCapCustom.css
+++ b/AxcelCapital/Content/AxcelCapCustom.css
@@ -352,6 +352,8 @@ textarea {
 
 .radiobtn_label_blue {
     color: #01AED2;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 @media (max-width: 600px) {
@@ -377,4 +379,22 @@ textarea {
         padding: 0;
         margin-top: 0;
     }
+}
+
+#g-recaptcha-response {
+    display: block !important;
+    position: absolute;
+    margin: -78px 0 0 0 !important;
+    width: 302px !important;
+    height: 76px !important;
+    z-index: -999999;
+    opacity: 0;
+}
+
+#recaptcha-error-msg{
+    display: none;
+}
+
+.recaptcha-div{
+    text-align: left;
 }
