--- a/AxcelCapital/Views/Home/Index.cshtml
+++ b/AxcelCapital/Views/Home/Index.cshtml
@@ -170,13 +170,13 @@
                     <div class="form-group row">
                         <div class="col-md-6 col-xs-12">
                             @Html.TextBoxFor(m => m.firstName, new { @class = "form-control", @required = "" })
-                            <label class="moving-label">First Name</label>
+                            <label class="moving-label">First Name*</label>
                             @*<label class="form-error" id="usernameErrorMsg" ></label>*@
                             @Html.ValidationMessageFor(m => m.firstName, "", new { @class = "form-error" })
                         </div>
                         <div class="col-md-6 col-xs-12">
                             @Html.TextBoxFor(m => m.lastName, new { @class = "form-control", @required = "" })
-                            <label class="moving-label">Last Name</label>
+                            <label class="moving-label">Last Name*</label>
                             @Html.ValidationMessageFor(m => m.lastName, "", new { @class = "form-error" })
                         </div>
                     </div>
@@ -184,12 +184,12 @@
                     <div class="form-group row">
                         <div class="col-md-6 col-xs-12">
                             @Html.TextBoxFor(m => m.email, new { @class = "form-control", @required = "" })
-                            <label class="moving-label">Email</label>
+                            <label class="moving-label">Email*</label>
                             @Html.ValidationMessageFor(m => m.email, "", new { @class = "form-error" })
                         </div>
                         <div class="col-md-6 col-xs-12">
                             @Html.TextBoxFor(m => m.mobile, new { @class = "form-control", @required = "" })
-                            <label class="moving-label">Mobile</label>
+                            <label class="moving-label">Mobile*</label>
                             @Html.ValidationMessageFor(m => m.mobile, "", new { @class = "form-error" })
                         </div>
                     </div>
@@ -219,11 +219,23 @@
 
                     <div class="bigTextArea">
                         @Html.TextAreaFor(m => m.message, new { @class = "form-control col-md-12", @rows = "5", @required = "" })
-                        <label class="moving-label">Enter your Message</label>
+                        <label class="moving-label">Enter your Message*</label>
                     </div>
 
                     <div class="btn-wrapper">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <div class="row">
+                            <div class="col-md-6 col-xs-12">
+                                <div class="col-xs-12">
+                                    <div class="g-recaptcha" data-sitekey="6LfV1HkUAAAAAHtt0_TrIzKWxXIZF5msjauutXfN"></div>
+                                </div>
+                                <div class="col-xs-12 recaptcha-div">
+                                    <span id="recaptcha-error-msg" class="form-error">Please select this field</span>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-xs-12">
+                                <button type="submit" class="btn btn-primary" onclick="validateCaptcha()">Submit</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             }
@@ -232,24 +244,37 @@
     </div>
 </section>
 
-<script>
-    $(function () {
-        $('.form-radiobtn').click(function () {
-            if ($(this).is(':checked')) {
-                $('label.radiobtn_label')
-                    .addClass("radiobtn_label_blue")
-                    .removeClass("radiobtn_label");
-            }
-        });
-    });
 
-</script>
 
 
 @section scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
+
+    @*Script to Change Class on RadioBtn click*@
+    <script>
+        $(document).ready(function () {
+            $('.form-radiobtn').click(function () {
+                if ($(this).is(':checked')) {
+                    $('label.radiobtn_label')
+                        .addClass("radiobtn_label_blue")
+                        .removeClass("radiobtn_label");
+                }
+            });
+        });
+    </script>
+
+    @*Script to validate if Captcha is selected, if not, display label*@
+    <script>
+        function validateCaptcha() {
+            var recaptcha = document.getElementById("g-recaptcha-response").value;
+            if (recaptcha === "") {
+                $('#recaptcha-error-msg').show();
+            }
+        }
+    </script>
 }
+
 
 
 
